--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
 	</dependencies>
 	<distributionManagement>
 		<repository>
-			<id>Repository</id>
+			<id>anypoint-exchange-v2</id>
 			<name>Corporate Repository</name>
 			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/ab9b269f-eba0-4815-8ef3-e14af1ec32c1/maven</url>
 			<layout>default</layout>
