--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,46 +14,58 @@ jobs:
       - name: Checkout this repo
         uses: actions/checkout@v4
 
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-
-
       - name: Set up JDK 1.8
         uses: actions/setup-java@v4
         with:
           distribution: "zulu"
-          java-version: 8
+          java-version: "8"
+          cache: "maven"
+
       - name: Publish to Exchange
         run: |
           mvn -B deploy --settings .maven/settings.xml -DskipMunitTests \
           -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
           -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
 
-  deploy-to-cloudhub:
+  deploy-to-cloudhub-dev:
     name: deploy-to-cloudhub
     runs-on: ubuntu-latest
+    if: github.ref_name == 'dev'
     needs: [ build-and-publish-to-exchange ]
-    if: github.ref_name == 'main' || github.ref_name == 'dev'
 
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
 
-      - name: Cache dependencies
-        uses: actions/cache@v4
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v4
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-
+          distribution: "zulu"
+          java-version: "8"
+          cache: "maven"
+
+      - name: Deploy to CloudHub 2.0
+        run: |
+          mvn -B deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
+          -Dclient.id="${{ secrets.CONNECTED_APP_CLIENT_ID }}" \
+          -Dclient.secret="${{ secrets.CONNECTED_APP_CLIENT_SECRET }}"
+
+  deploy-to-cloudhub-main:
+    name: deploy-to-cloudhub
+    runs-on: ubuntu-latest
+    if: github.ref_name == 'main'
+
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@v4
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v4
         with:
           distribution: "zulu"
-          java-version: 8
+          java-version: "8"
+          cache: "maven"
+
       - name: Deploy to CloudHub 2.0
         run: |
           mvn -B deploy --settings .maven/settings.xml -DskipMunitTests -DmuleDeploy \
